/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/**
 * These .proto interfaces are private and unstable.
 * Please see http://wiki.apache.org/hadoop/Compatibility
 * for what changes are allowed for a *unstable* .proto interface.
 */

syntax = "proto2";
option java_package = "org.apache.hadoop.hetu.photon.proto";
option java_outer_classname = "HetuPhotonProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package hadoop.hetu;

import "OmClientProtocol.proto";

/**
 * RowResult represents one row from a scanner, in row-wise layout.
 */
message PartialRow {
  repeated bytes rowData = 1;
  required int64 rowSize = 2;
  repeated int32 columnOffsets = 3;
  required int32 offset = 4;
  required bytes nullsBitSet = 5;
}

enum OperationType {
  INSERT = 1;
  UPDATE = 2;
  DELETE = 3;
  UPSERT = 4;
  SCAN_QUERY = 5;
}

message Operation {
  required OperationType operationType = 1;
  optional string conditionalExpression = 2;
}

message Dataset {
  required hadoop.ozone.SchemaProto schema = 1;
  repeated PartialRow partialRow = 2;
}